--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.3.1 - 07/10/2017
+Added:
+- Set Slackware version via configuration file /etc/slpkg/slpkg.conf
+
 3.3.0 - 01/10/2017
 Fixed: 
 - TypeError: stat() argument 1 must be encoded string without null bytes,
