--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+3.3.2 - 21/10/2017
+Fixed:
+- Strange dependency problem (2) #97
+- Msb repository switch to 1.18
+
 3.3.1 - 07/10/2017
 Added:
 - Set Slackware version via configuration file /etc/slpkg/slpkg.conf
