--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,8 @@
 Fixed:
 - Strange dependency problem (2) #97
 - Msb repository switch to 1.18
+Updated:
+- Slackware mirrors
 
 3.3.1 - 07/10/2017
 Added:
