--- a/man/slpkg.8
+++ b/man/slpkg.8
@@ -282,7 +282,7 @@ Additional options:
 .PP
 \fB--case-ins\fP : Search package name in repository with case insensitive.
 
-.SS -f, --find, find istalled packages
+.SS -f, --find, find installed packages
 \fBslpkg\fP \fB-f\fP <\fInames of packages\fP>, \fI--case-ins\fP 
 .PP
 Find installed packages with view total file size. 
