--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.3.5 - 10/03/2018
+Fixed:
+- pip install fails #106
+
 3.3.4 - 10/01/2018
 Added:
 - Print the file size per package in option -f, --find
