--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,8 @@
-3.3.5 - 10/03/2018
+3.3.5 - 01/04/2018
 Fixed:
 - pip install fails #106
+Updated:
+- Slackware mirrors
 
 3.3.4 - 10/01/2018
 Added:
