--- a/INSTALL
+++ b/INSTALL
@@ -22,7 +22,7 @@ There are mainly 3 ways:
    and run './install.sh'.
    slpkg auto-installed as Slackware package (root privileges are required).
 
-2) Download binary package from https://github.com/dslackw/slpkg/releases
+2) Download binary package from https://sourceforge.net/projects/slpkg/files/binary/
    and use Slackware command `upgradepkg --install-new <slpkg binary>`
 
 3) Using pip: pip install slpkg --upgrade
