--- a/man/slpkg.8
+++ b/man/slpkg.8
@@ -291,7 +291,8 @@ Example you can view all installed sbo packages like "# slpkg -f _SBo".
 Additional options:
 .PP
 \fB--case-ins\fP : Search package name with case insensitive.
-\fB--third-party\fP : View third party packages.
+.PP
+\fB--third-party\fP : View all the third-party packages.
 
 .SS -n, --network, view SBo packages
 \fBslpkg\fP \fB-n\fP <\fIname of package\fP>, <\fI[pattern], --checklist\fP>, \fI--case-ins\fP
@@ -321,7 +322,7 @@ and will skip any packages that do not already have a version installed.
 More information please read "man upgradepkg".
 
 .SS -r, --removepkg, remove previously installed Slackware binary packages
-\fBslpkg\fP \fB-r\fP \fB[-copy, -keep, -preserve, -warn]\fP <\fInames of packages\fP>, \fB--deps\fP, \fB--check-deps\fP, \fB--tag\fP, \fB--checklist\fP
+\fBslpkg\fP \fB-r\fP \fB[-copy, -keep, -preserve, -warn]\fP <\fInames of packages\fP>, \fB--deps\fP, \fB--check-deps\fP, \fB--tag\fP, \fB--checklist\fP, \fB--third-party\fP
 .PP
 Removes a previously installed Slackware package, while writing a progress report to 
 the standard output. A package may be specified either by the full package name (as 
@@ -339,6 +340,8 @@ Additional options:
 \fB--tag\fP : Remove packages with by TAG.
 .PP
 \fB--checklist\fP : Enable dialog utility and checklist option. (Require python2-pythondialog)
+.PP
+\fB--third-party\fP : Remove all the third-party packages.
 
 .SS -d, --display, display the installed packages contents and file list
 \fBslpkg\fP \fB-d\fP <\fInames of packages\fP>
