--- a/man/slpkg.8
+++ b/man/slpkg.8
@@ -341,7 +341,7 @@ Additional options:
 .PP
 \fB--checklist\fP : Enable dialog utility and checklist option. (Require python2-pythondialog)
 .PP
-\fB--third-party\fP : Remove all the third-party packages.
+\fB--third-party\fP : Remove all the third-party packages. (Be sure update the package lists before)
 
 .SS -d, --display, display the installed packages contents and file list
 \fBslpkg\fP \fB-d\fP <\fInames of packages\fP>
