--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,9 @@
-3.3.9 - 30/12/2018
+3.3.9 - 14/01/2019
 Updated:
 - Readme file and added example text file
 - Checklist error message
+- Removed unnecessary arguments ALL
+
 Added:
 - Support elilo and grub upgrade boot loader after kernel upgrade
 - View third party packages
