--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,10 +3,10 @@ Updated:
 - Readme file and added example text file
 - Checklist error message
 - Removed unnecessary arguments ALL
-
 Added:
 - Support elilo and grub upgrade boot loader after kernel upgrade
 - View third party packages
+- Remove third party packages
 
 3.3.8 - 09/06/2018
 Fixed:
