--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,7 @@ Added:
 - Support elilo and grub upgrade boot loader after kernel upgrade
 - View third party packages
 - Remove third party packages
+- Added file size in the removed packages
 
 3.3.8 - 09/06/2018
 Fixed:
