Rename command clean to clean-tmp
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/man/slpkg.8
+++ b/man/slpkg.8
@@ -153,8 +153,8 @@ Additional options:
 This command searches for .new configuration files in /etc/ path and ask the user what todo with those
 files.
 
-.SS clean, the tmp/ directory
-\fBslpkg\fP \fBclean\fP
+.SS clean-tmp, the tmp/ directory
+\fBslpkg\fP \fBclean-tmp\fP
 .PP
 Clean the /tmp/slpkg/ directory from downloaded packages and sources.
 
