--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,7 +6,7 @@ Updated:
 Fixed:
 - Bugfix: update slpkg itself from gitlab repository
 Added:
-- Command clean to remove the packages and the sources from /tmp/slpkg/ directory
+- Command 'clean-tmp' to remove the packages and the sources from /tmp/slpkg/ directory
 
 3.3.9 - 14/01/2019
 Updated:
