--- a/man/slpkg.8
+++ b/man/slpkg.8
@@ -29,7 +29,7 @@ Usage: slpkg [COMMANDS|OPTIONS] {repository|package...}
              [health, --silent]
              [deps-status, --tree, --graph=[type]]
              [new-config]
-			 [clean]
+			 [clean-tmp]
 
              Optional arguments:
              [-h] [-v]
