--- a/man/slpkg.8
+++ b/man/slpkg.8
@@ -15,48 +15,7 @@
 .SH NAME
 Slpkg is a user-friendly package manager for Slackware installations
 .SH SYNOPSIS
-Usage: slpkg [COMMANDS|OPTIONS] {repository|package...}
-
-             Commands:
-             [update, --repositories=[...]]
-             [upgrade, --repositories=[...]]
-             [repo-add [repository name] [URL]]
-             [repo-remove [repository]]
-             [repo-enable]
-             [repo-list]
-             [repo-info [repository]]
-             [update [slpkg]]
-             [health, --silent]
-             [deps-status, --tree, --graph=[type]]
-             [new-config]
-			 [clean-tmp]
-
-             Optional arguments:
-             [-h] [-v]
-             [-a [script] [sources...]]
-             [-b [package...] --add, --remove,
-                 [list]]
-             [-q [package...] --add, --remove,
-                 [list, build, install, build-install]]
-             [-g [print, edit, reset]]
-             [-l [repository], --index, --installed, --name]
-             [-c [repository], --upgrade, --rebuild, --skip=[...],
-                               --resolve-off, --checklist]
-             [-s [repository] [package...], --rebuild, --reinstall,
-                                            --resolve-off, --download-only,
-                                            --directory-prefix=[dir],
-                                            --case-ins, --patches]
-             [-t [repository] [package], --check-deps, --graph=[type],
-                                         --case-ins]
-             [-p [repository] [package], --color=[]]
-             [-n [SBo package], --checklist, --case-ins]
-             [-F [package...], --case-ins]
-             [-f [package...], --case-ins, --third-party]
-             [-i [options] [package...]]
-             [-u [options] [package...]]
-             [-r [options] [package...], --deps, --check-deps, --tag,
-                                         --checklist]
-             [-d [package...]]
+slpkg [COMMANDS|OPTIONS] {repository|package...}
 
 .SH DESCRIPTION
 Slpkg is a powerful software package manager that installs, updates, and
@@ -153,7 +112,7 @@ Additional options:
 This command searches for .new configuration files in /etc/ path and ask the user what todo with those
 files.
 
-.SS clean-tmp, the tmp/ directory
+.SS clean-tmp, clean the tmp/ directory
 \fBslpkg\fP \fBclean-tmp\fP
 .PP
 Clean the /tmp/slpkg/ directory from downloaded packages and sources.
