--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.4.3 - 03/02/2019
+Updated:
+- Update gen_repos_files.sh to version 1.94
+
 3.4.2 - 23/01/2019
 Fixed:
 - Bugfixed delete build folder in network option
