--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,12 @@
-3.7.0 - 1/12/2019
+3.7.1 - 02/12/2019
+Updated:
+- pythondialog dependency
+- slackware mirrors
+- pip installation method
+- improved setup.py file for python3
+- print function for python3 format
+
+3.7.0 - 01/12/2019
 Updated:
 - Switch to python3
 
