--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.7.2 - 06/12/2019
+Fixed:
+- Bugfix handle requests raise ConnectionError
+
 3.7.1 - 03/12/2019
 Updated:
 - pythondialog dependency
