--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.7.3 - 06/12/2019
+Fixed:
+- code style to python3 compatibility
+
 3.7.2 - 06/12/2019
 Fixed:
 - Bugfix handle requests raise ConnectionError
