--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.7.4 - 20/12/2019
+Fixed:
+-Bugfix: UnicodeDecodeError: 'utf-8' codec can't decode byte
+
 3.7.3 - 11/12/2019
 FIxed:
 - Bugfix: Slackware-current from Alien Bob 20191130 #119
