--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,12 @@
+3.7.5 - 15/01/2020
+Fixed:
+- Bugfix: merge files with slack repository between current and slack versions
+Updated:
+- code to improve for Python 3
+
 3.7.4 - 20/12/2019
 Fixed:
--Bugfix: UnicodeDecodeError: 'utf-8' codec can't decode byte
+- Bugfix: UnicodeDecodeError: 'utf-8' codec can't decode byte
 
 3.7.3 - 11/12/2019
 FIxed:
