--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.8.2 - 15/02/2020
+Fixed:
+- SBo repository view Packages and New version
+
 3.8.1 - 13/02/2020
 Fixed:
 - Bugfix double install packages from slack regular repo
