--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,8 @@
 Fixed:
 - SBo repository view Packages and New version
 - msb repository PACKAGES.txt file
+BugFix:
+- Upgrade distribution with option -c, --check
 
 3.8.1 - 13/02/2020
 Fixed:
