Updated to version 3.8.3
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.8.3 - 17/02/2020
+BugFix:
+- Counting packages for binaries repositories
+
 3.8.2 - 15/02/2020
 Fixed:
 - SBo repository view Packages and New version
