--- a/slackbuild/README
+++ b/slackbuild/README
@@ -4,6 +4,10 @@ computes dependencies and figures out what things should occur
 to install packages. Slpkg makes it easier to maintain groups 
 of machines without having to manually update.
 
+Hard dependencies:
+  python3, python-urllib3
+
+
 Optional dependencies:
    python3-pythondialog (for dialog box interface)
    pygraphviz (for drawing dependencies diagram)
