Bugfix grap MD5SUM from info file #125
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.8.4 - 25/02/2020
+BugFix:
+- Grab MD5SUM from wrong info file return None
+
 3.8.3 - 21/02/2020
 BugFix:
 - Counting packages for binaries repositories
