--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.8.5 - 5/03/2020
+Added:
+- set export variable $TAG #126
+
 3.8.4 - 25/02/2020
 BugFix:
 - Grab MD5SUM from wrong info file return None
