--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.8.8 - 20/05/2020
+BugFix:
+- Fixed the name of variable flags to flag for patches upgrade option
+
 3.8.7 - 01/04/2020
 BuFix:
 - '--checklist' flag doesn't work since 3.8.1 to 3.8.6 version #127
