--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+3.9.0 - 21/06/2020
+BugFix:
+- Fixed --checklist flag works both with --upgrade option
+
 3.8.9 - 03/06/2020
 BugFix:
 - Fixed Slackware distribution --upgrade flag
